-Profile Updated -Since argoUML is writing the wrong href in the *.xmi file, I've created an example.xmi and improved it. It seams to bei an ArgoUML-Bug but I'm on it.

--- a/GrailsMDA/build.xml
+++ b/GrailsMDA/build.xml
@@ -4,7 +4,7 @@
 	<property name="env.CLASSPATH" value="" />
 	<property name="genpath" value="./target/src" />
 	<property name="genpathroot" value="./target" />
-	<property name="modelpath" value="jar:file:./model/agroUml.xmi.zargo!/agroUml.xmi" />
+	<property name="modelpath" value="file:./model/example.xmi" />
 	<property name="modelprocessorpath" value="file:./src/templates/domain/DomainModelProcessor.groovy" />
 	<property name="groovyMDA" value="./lib/groovymda-1.0.jar"/>
 	
