--- a/trunk/GrailsMDA/.classpath
+++ b/trunk/GrailsMDA/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="target/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT"/>
-	<classpathentry kind="lib" path="lib/groovymda-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/groovymda-1.0.jar" sourcepath="/groovyMDA"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
