--- a/trunk/GrailsMDA/build.xml
+++ b/trunk/GrailsMDA/build.xml
@@ -9,9 +9,11 @@
 	<property name="lib.dir" value="lib" />
 
 	<!--<property name="modelpath" value="file:./model/example.xmi" />-->
-	<!--<property name="modelpath" value="file:./model/agroUml.xmi" />-->
-	<property name="modelpath" value="file:./model/forumDeluxe.xmi" />
-	<property name="modelprocessorpath" value="file:./src/templates/domain/DomainModelProcessor.groovy" />
+	<property name="modelpath" value="jar:file:./model/agroUml.xmi.zargo!/agroUml.xmi" />
+	<!--<property name="modelpath" value="file:./model/forumDeluxe.xmi" />-->
+	<!--<property name="modelprocessorpath" value="file:./src/templates/domain/DomainModelProcessor.groovy" />-->
+	<property name="modelprocessorpath" value="file:./src/templates/valueobject/ValueObjectProcessor.groovy" />
+	
 	<property name="groovyMDA" value="./lib/groovymda-1.0.jar" />
 
 	<path id="classpath">
@@ -35,14 +37,14 @@
 	</target>
 	<target name="clean-build" depends="clean,build" />
 
-	<target name="compile">
+	<target name="compile" depends="clean">
 		<mkdir dir="target/build/classes" />
 		<javac srcdir="src" destdir="target/build/classes" classpathref="classpath" />
 	</target>
 
 	<target name="jar" depends="compile">
-		<copy todir="target/build/classes/templates/domain/">
-			<fileset dir="src/templates/domain/" excludes="templates/domain/**.class" />
+		<copy todir="target/build/classes/templates/">
+			<fileset dir="src/templates/" excludes="**.class" />
 		</copy>
 		<jar destfile="${genpathroot}/grailsMDA-${version}.jar">
 			<fileset dir="target/build/classes" excludes="**.java" />
