--- a/trunk/GrailsMDA/build.xml
+++ b/trunk/GrailsMDA/build.xml
@@ -9,11 +9,12 @@
 	<property name="lib.dir" value="lib" />
 
 	<!--<property name="modelpath" value="file:./model/example.xmi" />-->
-	<property name="modelpath" value="jar:file:./model/agroUml.xmi.zargo!/agroUml.xmi" />
+	<property name="modelpath" value="file:./model/agroUml.xmi" />
 	<!--<property name="modelpath" value="file:./model/forumDeluxe.xmi" />-->
-	<property name="modelprocessorpath" value="file:./src/templates/domain/DomainModelProcessor.groovy" />
+	<!--<property name="modelprocessorpath" value="file:./src/templates/domain/DomainModelProcessor.groovy" />-->
 	<!--<property name="modelprocessorpath" value="file:./src/templates/valueobject/ValueObjectProcessor.groovy" />-->
 	<!--<property name="modelprocessorpath" value="file:./src/templates/controller/ControllerProcessor.groovy" />-->
+	<property name="modelprocessorpath" value="file:./src/templates/stereotypes/StereotypesProcessor.groovy" />
 	
 	<property name="groovyMDA" value="./lib/groovymda-1.0.jar" />
 
